--- a/zippy-droid/src/main/res/layout/fragment_camera.xml
+++ b/zippy-droid/src/main/res/layout/fragment_camera.xml
@@ -9,23 +9,41 @@
             android:id="@+id/textureView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="150dp"/>
-    <Button
-            android:text="Take Picture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/takePictureBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textureView"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
-            android:layout_width="73dp"
-            android:layout_height="76dp"
-            android:id="@+id/testImageIv" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textureView" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/takePictureBtn"
-            android:layout_marginEnd="8dp"/>
+            android:id="@+id/faceFrameIv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/document_back"
+            android:visibility="visible"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp" />
+
+    <ImageView
+            android:id="@+id/documentFrontFrameIv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/document_front"
+            android:visibility="invisible"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="95dp" />
+
+    <ImageView
+            android:id="@+id/documentBackFrameIv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/document_back"
+            android:visibility="invisible"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="95dp" />
+
+    <Button
+            android:id="@+id/takePictureBtn"
+            android:background="@drawable/camera_black_button"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="20dp" app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
