--- a/zippy-droid/src/main/res/layout/fragment_wizard.xml
+++ b/zippy-droid/src/main/res/layout/fragment_wizard.xml
@@ -154,5 +154,11 @@
             android:layout_marginTop="10dp" android:layout_marginStart="55dp" android:layout_marginEnd="55dp"
             app:layout_constraintTop_toBottomOf="@+id/zippyBtn"/>
 
+    <ImageView
+            android:id="@+id/exampleIv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/card_example"
+            android:visibility="gone" />
 
 </android.support.constraint.ConstraintLayout>
