--- a/zippy-droid/src/main/res/layout/fragment_wizard.xml
+++ b/zippy-droid/src/main/res/layout/fragment_wizard.xml
@@ -111,29 +111,6 @@
             android:visibility="invisible"
             app:layout_constraintBaseline_toBaselineOf="@+id/sendingLabelTv"/>
 
-
-    <TextView
-            android:id="@+id/processingLabelTv"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:text="Processing:"
-            android:textSize="17sp"
-            android:textColor="@android:color/black"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="@+id/sendingLabelTv"
-            app:layout_constraintTop_toBottomOf="@+id/sendingLabelTv"/>
-    <TextView
-            android:text="OK"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:id="@+id/processingOkLabelTv" app:layout_constraintStart_toEndOf="@+id/processingLabelTv"
-            android:layout_marginStart="16dp"
-            android:textSize="17sp"
-            android:textColor="@android:color/black"
-            android:visibility="invisible"
-            app:layout_constraintBaseline_toBaselineOf="@+id/processingLabelTv"/>
-
-
     <Button
             android:id="@+id/zippyBtn"
             android:layout_height="50dp"
@@ -143,7 +120,7 @@
             android:textAllCaps="false"
             android:background="@drawable/custom_button"
             android:layout_marginTop="40dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
-            app:layout_constraintStart_toStartOf="@+id/processingLabelTv" app:layout_constraintTop_toBottomOf="@+id/processingLabelTv" />
+            app:layout_constraintStart_toStartOf="@+id/sendingLabelTv" app:layout_constraintTop_toBottomOf="@+id/sendingLabelTv" />
     <TextView
             android:id="@+id/helpLabelTv"
             android:layout_width="match_parent"
