--- a/zippy-droid/src/main/res/layout/fragment_camera.xml
+++ b/zippy-droid/src/main/res/layout/fragment_camera.xml
@@ -71,7 +71,8 @@
             android:layout_height="match_parent"
             android:src="@drawable/document_back"
             android:visibility="invisible"
-            tools:layout_editor_absoluteY="102dp" tools:layout_editor_absoluteX="0dp"/>
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="95dp"/>
 
     <Button
             android:id="@+id/takePictureBtn"
