--- a/zippy-droid/src/main/res/layout/fragment_camera.xml
+++ b/zippy-droid/src/main/res/layout/fragment_camera.xml
@@ -1,70 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto">
-    <com.zippyid.zippydroid.camera.AutoFitTextureView
-            android:id="@+id/textureView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent" />
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/faceFrameCl"
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="invisible">
+        android:background="@android:color/black"
+        android:backgroundTint="@android:color/black"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-            android:id="@+id/opaqueBackgroundTopIv"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:src="@drawable/opaque_background"
-            android:scaleType="fitXY"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/faceFrameIv"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-    <ImageView
-            android:id="@+id/faceFrameIv"
+    <com.zippyid.zippydroid.camera.AutoFitTextureView
+            android:id="@+id/cameraTextureView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/face_frame_gray"
-            android:adjustViewBounds="true"
-            app:layout_constraintTop_toBottomOf="@id/opaqueBackgroundTopIv"
-            app:layout_constraintBottom_toTopOf="@id/opaqueBackgroundBottomIv"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/takePictureBtn"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-            android:id="@+id/opaqueBackgroundBottomIv"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:src="@drawable/opaque_background"
-            android:scaleType="fitXY"
-            app:layout_constraintTop_toBottomOf="@id/faceFrameIv"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-</android.support.constraint.ConstraintLayout>
-
-    <android.support.constraint.ConstraintLayout
-            android:id="@+id/documentFrontFrameCl"
+    <LinearLayout
+            android:id="@+id/faceFrameLl"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="invisible">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/cameraTextureView"
+            app:layout_constraintTop_toTopOf="@id/cameraTextureView" >
+
+        <ImageView
+                android:id="@+id/faceOpaqueBackgroundTopIv"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:src="@drawable/opaque_background"
+                android:scaleType="fitXY"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/faceFrameIv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+                android:id="@+id/faceFrameIv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/face_frame_gray"
+                android:adjustViewBounds="true"
+                app:layout_constraintTop_toBottomOf="@id/faceOpaqueBackgroundTopIv"
+                app:layout_constraintBottom_toTopOf="@id/faceOpaqueBackgroundBottomIv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+                android:id="@+id/faceOpaqueBackgroundBottomIv"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:src="@drawable/opaque_background"
+                android:scaleType="fitXY"
+                app:layout_constraintTop_toBottomOf="@id/faceFrameIv"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+    </LinearLayout>
+
+    <LinearLayout
+            android:id="@+id/documentFrontFrameLl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/cameraTextureView"
+            app:layout_constraintTop_toTopOf="@id/cameraTextureView" >
 
         <ImageView
                 android:id="@+id/documentFrontOpaqueBackgroundTopIv"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_weight="1"
                 android:src="@drawable/opaque_background"
                 android:scaleType="fitXY"
                 app:layout_constraintTop_toTopOf="parent"
@@ -85,29 +99,33 @@
 
         <ImageView
                 android:id="@+id/documentFrontOpaqueBackgroundBottomIv"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_weight="1"
                 android:src="@drawable/opaque_background"
                 android:scaleType="fitXY"
                 app:layout_constraintTop_toBottomOf="@id/documentFrontFrameIv"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
+    </LinearLayout>
 
-    </android.support.constraint.ConstraintLayout>
-
-    <android.support.constraint.ConstraintLayout
-            android:id="@+id/documentBackFrameCl"
+    <LinearLayout
+            android:id="@+id/documentBackFrameLl"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="visible">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/cameraTextureView"
+            app:layout_constraintTop_toTopOf="@id/cameraTextureView" >
 
         <ImageView
                 android:id="@+id/documentBackOpaqueBackgroundTopIv"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_weight="1"
                 android:src="@drawable/opaque_background"
                 android:scaleType="fitXY"
                 app:layout_constraintTop_toTopOf="parent"
@@ -128,16 +146,16 @@
 
         <ImageView
                 android:id="@+id/documentBackOpaqueBackgroundBottomIv"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_weight="1"
                 android:src="@drawable/opaque_background"
                 android:scaleType="fitXY"
                 app:layout_constraintTop_toBottomOf="@id/documentBackFrameIv"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
-
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
     <TextView
             android:id="@+id/titleTv"
@@ -162,13 +180,15 @@
             android:layout_marginTop="15dp" android:layout_marginStart="15dp" android:layout_marginEnd="15dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/titleTv"/>
 
-
-    <Button
+    <ImageButton
             android:id="@+id/takePictureBtn"
-            android:background="@drawable/camera_button_gray"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="20dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:background="@drawable/camera_button_gray"
+            android:gravity="center"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
