--- a/zippy-droid/src/main/res/layout/fragment_wizard.xml
+++ b/zippy-droid/src/main/res/layout/fragment_wizard.xml
@@ -122,4 +122,16 @@
             android:layout_marginTop="40dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
             app:layout_constraintStart_toStartOf="@+id/sendingLabelTv" app:layout_constraintTop_toBottomOf="@+id/sendingLabelTv" />
 
+    <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:indeterminate="true"
+            android:visibility="invisible"
+            android:indeterminateTint="@android:color/holo_orange_dark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
