--- a/zippy-droid/src/main/res/layout/fragment_wizard.xml
+++ b/zippy-droid/src/main/res/layout/fragment_wizard.xml
@@ -119,8 +119,8 @@
             android:textColor="@android:color/white"
             android:textAllCaps="false"
             android:background="@drawable/custom_button"
-            android:layout_marginTop="40dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
-            app:layout_constraintStart_toStartOf="@+id/sendingLabelTv" app:layout_constraintTop_toBottomOf="@+id/sendingLabelTv" />
+            android:layout_marginBottom="50dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
+            app:layout_constraintStart_toStartOf="@+id/sendingLabelTv" app:layout_constraintBottom_toBottomOf="parent" />
 
     <ProgressBar
             android:id="@+id/progressBar"
