UI tweaks and clean up

--- a/zippy-droid/src/main/res/layout/fragment_camera.xml
+++ b/zippy-droid/src/main/res/layout/fragment_camera.xml
@@ -90,6 +90,8 @@
                 android:id="@+id/documentFrontFrameIv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="-2dp"
+                android:layout_marginEnd="-2dp"
                 android:src="@drawable/document_front_frame_gray"
                 android:adjustViewBounds="true"
                 app:layout_constraintTop_toBottomOf="@id/documentFrontOpaqueBackgroundTopIv"
@@ -138,6 +140,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/document_back_frame_gray"
+                android:layout_marginStart="-2dp"
+                android:layout_marginEnd="-2dp"
                 android:adjustViewBounds="true"
                 app:layout_constraintTop_toBottomOf="@id/documentBackOpaqueBackgroundTopIv"
                 app:layout_constraintBottom_toTopOf="@id/documentBackOpaqueBackgroundBottomIv"
