--- a/zippy-droid/src/main/res/layout/fragment_id_vertification.xml
+++ b/zippy-droid/src/main/res/layout/fragment_id_vertification.xml
@@ -46,7 +46,7 @@
             android:text="Continue"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:background="@drawable/custom_button"
+            android:background="@drawable/custom_button_orange"
             android:layout_marginTop="50dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
             app:layout_constraintTop_toBottomOf="@+id/documentSpinner"/>
 
