--- a/zippy-droid/src/main/res/layout/fragment_wizard.xml
+++ b/zippy-droid/src/main/res/layout/fragment_wizard.xml
@@ -118,7 +118,7 @@
             android:text="Preparing..."
             android:textColor="@android:color/white"
             android:textAllCaps="false"
-            android:background="@drawable/custom_button"
+            android:background="@drawable/custom_button_orange"
             android:layout_marginBottom="50dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
             app:layout_constraintStart_toStartOf="@+id/sendingLabelTv" app:layout_constraintBottom_toBottomOf="parent" />
 
