--- a/zippy-droid/src/main/res/layout/fragment_photo_confirmation.xml
+++ b/zippy-droid/src/main/res/layout/fragment_photo_confirmation.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <ImageView
             android:id="@+id/photoIv"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:layout_marginTop="50dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="227dp"
+            android:scaleType="centerInside"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="parent" />
+
     <TextView
             android:id="@+id/descriptionTv"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_above = "@+id/isReadableBtn"
             android:text="Make sure your license details are clear to read, with no blur or glare"
-            android:gravity="center_horizontal"
-            android:textSize="16sp"
-            android:layout_marginTop="16dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
-            app:layout_constraintTop_toBottomOf="@+id/photoIv"/>
+            android:gravity="center"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@+id/isReadableBtn"
+            android:layout_marginBottom="15dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp" />
 
     <Button
             android:id="@+id/isReadableBtn"
