--- a/zippy-droid/src/main/res/layout/fragment_camera.xml
+++ b/zippy-droid/src/main/res/layout/fragment_camera.xml
@@ -195,4 +195,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
 
+    <View
+            android:id="@+id/whiteBackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"
+            android:background="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
+
+
+    <ProgressBar
+            android:id="@+id/cameraProgressBar"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:indeterminate="true"
+            android:indeterminateTint="@android:color/holo_orange_dark"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
