--- a/zippy-droid/src/main/res/layout/fragment_photo_confirmation.xml
+++ b/zippy-droid/src/main/res/layout/fragment_photo_confirmation.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="match_parent"
+                                            xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
             android:id="@+id/photoIv"
@@ -57,4 +57,4 @@
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
