--- a/zippy-droid/src/main/res/layout/fragment_wizard.xml
+++ b/zippy-droid/src/main/res/layout/fragment_wizard.xml
@@ -7,13 +7,13 @@
             android:id="@+id/preparingLabelTv"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:text="Preparing:"
+            android:text="@string/label_preparing"
             android:textSize="17sp"
             android:textColor="@android:color/black"
             android:layout_marginTop="50dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
     <TextView
-            android:text="OK"
+            android:text="@string/label_ok"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
             android:id="@+id/preparingOkLabelTv" app:layout_constraintStart_toEndOf="@+id/preparingLabelTv"
@@ -28,14 +28,14 @@
             android:id="@+id/faceLabelTv"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:text="Face:"
+            android:text="@string/label_face"
             android:textSize="17sp"
             android:textColor="@android:color/black"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="@+id/preparingLabelTv"
             app:layout_constraintTop_toBottomOf="@+id/preparingLabelTv"/>
     <TextView
-            android:text="OK"
+            android:text="@string/label_ok"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
             android:id="@+id/faceOkLabelTv" app:layout_constraintStart_toEndOf="@+id/faceLabelTv"
@@ -50,14 +50,14 @@
             android:id="@+id/documentFrontLabelTv"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:text="Document front:"
+            android:text="@string/label_document_front"
             android:textSize="17sp"
             android:textColor="@android:color/black"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="@+id/faceLabelTv"
             app:layout_constraintTop_toBottomOf="@+id/faceLabelTv" />
     <TextView
-            android:text="OK"
+            android:text="@string/label_ok"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
             android:id="@+id/docFrontOkLabelTv" app:layout_constraintStart_toEndOf="@+id/documentFrontLabelTv"
@@ -72,14 +72,14 @@
             android:id="@+id/documentBackLabelTv"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:text="Document back:"
+            android:text="@string/label_document_back"
             android:textSize="17sp"
             android:textColor="@android:color/black"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="@+id/documentFrontLabelTv"
             app:layout_constraintTop_toBottomOf="@+id/documentFrontLabelTv"/>
     <TextView
-            android:text="OK"
+            android:text="@string/label_ok"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
             android:id="@+id/docBackOkLabelTv" app:layout_constraintStart_toEndOf="@+id/documentBackLabelTv"
@@ -94,14 +94,14 @@
             android:id="@+id/sendingLabelTv"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:text="Sending:"
+            android:text="@string/label_sending"
             android:textSize="17sp"
             android:textColor="@android:color/black"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="@+id/documentBackLabelTv"
             app:layout_constraintTop_toBottomOf="@+id/documentBackLabelTv"/>
     <TextView
-            android:text="OK"
+            android:text="@string/label_ok"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
             android:id="@+id/sendingOkLabelTv" app:layout_constraintStart_toEndOf="@+id/sendingLabelTv"
@@ -115,7 +115,7 @@
             android:id="@+id/zippyBtn"
             android:layout_height="50dp"
             android:layout_width="match_parent"
-            android:text="Preparing..."
+            android:text="@string/label_preparing_btn"
             android:textColor="@android:color/white"
             android:textAllCaps="false"
             android:background="@drawable/custom_button_orange"
